[tool.poetry]
name = "news-notify"
version = "0.1.0"
description = ""
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
line-py = {git = "https://github.com/seriaati/line.py"}
tortoise-orm = "^0.20.0"
asyncpg = "^0.28.0"
stock-crawl = {git = "https://github.com/seriaati/stock_crawl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
