[project]
name = "news-notify"
version = "1.0.0"
description = "上市櫃公司重大訊息即時通知"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "line-messaging-api",
    "stock-crawl",
    "tortoise-orm>=0.24.0",
    "uvicorn>=0.34.0",
]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[tool.uv.sources]
line-messaging-api = { git = "https://github.com/seriaati/line.py" }
stock-crawl = { git = "https://github.com/seriaati/stock_crawl" }
